--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <section class="accordionItemInnerHeader">Personal projects</section>
         <section class="accordionItemBody">
           <p>
-            <a href="https://repl.it/@jamaljalzek/portfolio">This portfolio website</a><br>
+            <a href="https://github.com/jamaljalzek/jamaljalzek.github.io">This portfolio website</a><br>
             Technologies used: HTML, CSS, JavaScript, jQuery, Google Apps Script, Repl.it<br>
             Initial release: 2020<br>
             Status: in progress
