--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <ul>
             <li>Eclipse..........................Java IDE</li>
             <li>Visual Studio Community..........C# IDE</li>
-            <li>Repl.it..........................HTML, CSS, JavaScript IDE</li>
+            <li>Repl.it..........................HTML, CSS, JavaScript Editor</li>
             <li>GitHub...........................Version control</li>
           </ul>
           <hr class="dashedLine">
@@ -83,7 +83,7 @@
         <!-- Beginning of soft skills section. -->
         <section class="accordionItemInnerHeader">Soft skills</section>
         <section class="accordionItemBody">
-          <p>Team environment skills and qualities:</p>
+          <p>Interpersonal skills and qualities:</p>
           <ul>
             <li>Agile/Scrum</li>
             <li>Collaboration</li>
@@ -91,8 +91,9 @@
             <li>Empathy</li>
           </ul>
           <hr class="dashedLine">
-          <p>Individual skills and qualities:</p>
+          <p>Intrapersonal skills and qualities:</p>
           <ul>
+            <li>Humility</li>
             <li>Patience</li>
             <li>Resourcefulness</li>
             <li>Troubleshooting</li>
@@ -174,7 +175,7 @@
           <p>Relevant accounts:</p>
           <p>
             <ul>
-              <li><a href="https://repl.it/@jjalzek">Repl.it</a></li>
+              <li><a href="https://repl.it/@jamaljalzek">Repl.it</a></li>
               <li><a href="https://github.com/jamaljalzek">GitHub</a></li>
               <li><a href="https://leetcode.com/jamaljalzek/">LeetCode</a></li>
             </ul>
