--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
         <section class="accordionItemInnerHeader">Personal projects</section>
         <section class="accordionItemBody">
           <p>
-            <a href="https://github.com/jamaljalzek/jamaljalzek.github.io">This portfolio website</a><br>
-            Technologies used: HTML, CSS, JavaScript, jQuery, Google Apps Script, Repl.it<br>
-            Initial release: 2020<br>
-            Status: in progress
-          </p>
-          <hr class="dashedLine">
-          <p>
             <a href="https://github.com/jamaljalzek/Maze-Puzzle-Generator">Maze puzzle generator</a><br>
             Technologies used: C#, .NET, WPF, Visual Studio<br>
             Initial release: 2020<br>
-            Status: in progress
+            Status: completed
+          </p>
+          <hr class="dashedLine">
+          <p>
+            <a href="https://github.com/jamaljalzek/jamaljalzek.github.io">This portfolio website</a><br>
+            Technologies used: HTML, CSS, JavaScript, jQuery, Google Apps Script, Repl.it<br>
+            Initial release: 2020<br>
+            Status: completed
           </p>
           <hr class="dashedLine">
           <p>
