--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li>HTML................under 1 year</li>
             <li>CSS.................under 1 year</li>
             <li>JavaScript..........under 1 year</li>
+            <li>AutoHotKey..........under 1 year</li>
           </ul>
           <hr class="dashedLine">
           <p>Frameworks:</p>
@@ -52,6 +53,7 @@
             <li>Swing.......................Java</li>
             <li>.NET........................C#</li>
             <li>WPF.........................C#</li>
+            <li>Xamarin Forms...............C#</li>
             <li>jQuery......................JavaScript</li>
             <li>Google Apps Script..........JavaScript</li>
           </ul>
@@ -73,8 +75,10 @@
           <p>Collaboration tools:</p>
           <ul>
             <li>Discord</li>
+            <li>Microsoft Teams</li>
             <li>Mural</li>
             <li>Slack</li>
+            <li>Trello</li>
             <li>Zoom</li>
           </ul>
         </section>
@@ -112,7 +116,8 @@
         <section class="accordionItemInnerHeader">Relevant courses</section>
         <section class="accordionItemBody">
           <ul>
-            <li>CompSci 595 - Capstone Project.................................................Spring 2021</li>
+            <li>CompSci 595 - Capstone Project (with C#).......................................Spring 2021</li>
+            <li>CompSci 557 - Introduction to Database Systems.................................Fall 2019</li>
             <li>CompSci 535 - Algorithm Design & Analysis......................................Spring 2021</li>
             <li>CompSci 537 - Introduction to Operating Systems (with C).......................Fall 2020</li>
             <li>CompSci 482 - Rich Internet Applications (with HTML, CSS, JavaScript)..........Spring 2020</li>
@@ -130,6 +135,13 @@
         <!-- Beginning of personal projects section. -->
         <section class="accordionItemInnerHeader">Personal projects</section>
         <section class="accordionItemBody">
+          <p>
+            <a href="https://github.com/jamaljalzek/Capstone_Group_Project">Capstone group project</a><br>
+            Technologies used: C#, .NET, Xamarin Forms, Visual Studio<br>
+            Initial release: 2021<br>
+            Status: completed
+          </p>
+          <hr class="dashedLine">
           <p>
             <a href="https://github.com/jamaljalzek/Maze-Puzzle-Generator">Maze puzzle generator</a><br>
             Technologies used: C#, .NET, WPF, Visual Studio<br>
@@ -214,7 +226,7 @@
           Bachelor of Science<br>
           Major in Computer Science (ABET accredited)<br>
           January 2018 - May 2021<br>
-          3.404 cumulative GPA
+          Anticipated 3.4 cumulative GPA
         </p>
         <ul>
           <li>Emphasis in Software Engineering</li>
