--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/Maze-Puzzle-Generator">Maze puzzle generator</a><br>
+            <a href="https://github.com/jamaljalzek/Maze_Puzzle_Generator">Maze puzzle generator</a><br>
             Technologies used: C#, .NET, WPF, Visual Studio<br>
             Initial release: 2020<br>
             Status: completed
@@ -226,7 +226,7 @@
           Bachelor of Science<br>
           Major in Computer Science (ABET accredited)<br>
           January 2018 - May 2021<br>
-          Anticipated 3.4 cumulative GPA
+          3.447 cumulative GPA
         </p>
         <ul>
           <li>Emphasis in Software Engineering</li>
