--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
             <li>Trello</li>
             <li>Zoom</li>
           </ul>
+          <hr class="dashedLine">
+          <p>Other:</p>
+          <ul>
+            <li>Object-oriented Programming</li>
+            <li>Algorithms & Data Scructures</li>
+            <li>Debugging</li>
+          </ul>
         </section>
         <!-- End of technical skills section. -->
 
