--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p>Other:</p>
           <ul>
             <li>Object-oriented Programming</li>
-            <li>Algorithms & Data Scructures</li>
+            <li>Algorithms & Data Structures</li>
             <li>Debugging</li>
           </ul>
         </section>
