--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <p>
             <a href="https://github.com/jamaljalzek/Sudoku_Puzzle_Game">Sudoku puzzle game</a><br>
             Technologies used: Java, Swing, Eclipse<br>
-            Initial release: 2019<br>
+            Initial release: 2020<br>
             Status: completed
           </p>
           <hr class="dashedLine">
@@ -212,15 +212,14 @@
           UITS Help Desk Consultant<br>
           University Information Technology Services (UITS)<br>
           University of Wisconsin - Milwaukee<br>
-          Milwaukee, WI<br>
-          June 29th 2018 – December 14th 2018
+          June 2018 – December 2018
         </p>
         <ul>
           <li>Troubleshot a variety of technical problems (incidents) that primarily involved the software services offered throughout the entire campus.</li>
-          <li>Collaborated with other technology specialists across separate departments throughout the university who had the permissions and tools to resolve specific incidents, such as working on hardware.</li>
-          <li>Communicated with the diverse spectrum of students, faculty, staff, and alumni of the university primarily over the phone, as well as in person and via email to record and resolve incidents.</li>
-          <li>Supervised various computer laboratories around the campus, including scanning and printing stations, in order to answer questions, troubleshoot incidents, provide equipment, maintain smooth operation, etc.</li>
-          <li>Utilized the Cherwell Management System to create, work on, escalate, and resolve upwards of 20 incidents (tickets) per day.</li>
+          <li>Collaborated with technology specialists in separate departments throughout the university who had the permissions and tools to resolve specific incidents, such as working on hardware.</li>
+          <li>Communicated with a diverse spectrum of students, faculty, staff, and alumni to track and resolve incidents.</li>
+          <li>Supervised various computer laboratories around the campus, including scanning and printing stations, to answer users’ questions, troubleshoot incidents, provide equipment, etc. in order to ensure smooth operation for users.</li>
+          <li>Utilized the Cherwell Management System to create, work on, escalate, and resolve incidents (tickets).</li>
         </ul>
       </section>
       <!-- End of technical experience employment section. -->
