--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
         <p>
           Jamal J. Alzek<br>
           Born in Milwaukee, Wisconsin<br>
-          Raised and currently resides in South Milwaukee, Wisconsin<br>
-          <br>
-          Graduating in May of 2021, Jamal is working diligently to finish his final semester in the Computer Science program at the University of Wisconsin-Milwaukee. Once completed, he will have earned his Bachelor's degree, and seeks to immediately transition into the industry as a full time software engineer. He is currently open to job opportunities, and welcomes any conversations on the matter.<br>
-          Being primarily interested in the software engineering aspect of his degree program, he has completed a list of programming courses to date. He also works on personal projects in his spare time, as well as the occasional LeetCode challenge to practice working with data structures and algorithms. Currently, his favorite programming languages are C# and Java, however he has also found the fun that exists in web development languages like JavaScript, HTML, and CSS.<br>
-          Aside from programming, his other hobbies include assembling desktop computers, listening to podcasts, watching the occasional anime, and generally avoiding exercise.
+          Raised and currently resides in South Milwaukee, Wisconsin
+        </p>
+        <p>
+          A recent graduate of the University of Wisconsin-Milwaukee, Jamal has completed his Bachelor of Science with a major in Computer Science. He now seeks to immediately transition into a full time role in the Information Technology industry. While being primarily interested in software engineering positions, he takes all job opportunities into consideration, and welcomes any conversations on the matter.
+        </p>
+        <p>
+          By placing an emphasis on software engineering during his degree program, he has completed a list of programming courses to date. He also has a growing list of completed personal programming projects, which can be explored below. Currently, his programming languages of choice are C# and Java, however he has experience with additional languages, as well as various frameworks and tools, as seen below.
+        </p>
+        <p>
+          Aside from programming, his other hobbies include assembling desktop computers, listening to podcasts, watching the occasional anime, and generally staying indoors.
         </p>
       </section>
       <!-- End of introduction section. -->
