--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <p>Frameworks:</p>
           <ul>
             <li>Swing.......................Java</li>
+            <li>JUnit.......................Java</li>
             <li>.NET........................C#</li>
             <li>WPF.........................C#</li>
             <li>Xamarin Forms...............C#</li>
@@ -66,7 +67,8 @@
           <p>Development tools:</p>
           <ul>
             <li>Eclipse..........................Java IDE</li>
-            <li>Visual Studio Community..........C# IDE</li>
+            <li>IntelliJ IDEA....................Java IDE</li>
+            <li>Visual Studio....................C# IDE</li>
             <li>Repl.it..........................HTML, CSS, JavaScript Editor</li>
             <li>GitHub...........................Version control</li>
           </ul>
