--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
         </p>
         <ul>
           <li>Troubleshot a variety of technical problems (incidents) that primarily involved the software services offered throughout the entire campus.</li>
-          <li>Collaborated with technology specialists in separate departments throughout the university who had the permissions and tools to resolve specific incidents, such as working on hardware.</li>
-          <li>Communicated with a diverse spectrum of students, faculty, staff, and alumni to track and resolve incidents.</li>
-          <li>Supervised various computer laboratories around the campus, including scanning and printing stations, to answer users’ questions, troubleshoot incidents, provide equipment, etc. in order to ensure smooth operation for users.</li>
+          <li>Partnered with technology specialists across separate departments throughout the university to collaboratively resolve multifaceted incidents.</li>
+          <li>Communicated with a diverse spectrum of students, faculty, staff, and alumni to identify and implement solutions to a wide range of I.T. problems.</li>
+          <li>Supervised various computer laboratories around the campus, including scanning and printing stations, to troubleshoot incidents, answer users’ questions, provide equipment, etc. in order to ensure smooth operation for users.</li>
           <li>Utilized the Cherwell Management System to create, work on, escalate, and resolve incidents (tickets).</li>
         </ul>
       </section>
