--- a/index.html
+++ b/index.html
@@ -44,33 +44,38 @@
         <section class="accordionItemBody">
           <p>Programming languages:</p>
           <ul>
-            <li>Java................3 years</li>
             <li>C#..................2 years</li>
+            <li>Java................3 years</li>
             <li>C...................1 year</li>
+            <li>JavaScript..........under 1 year</li>
             <li>HTML................under 1 year</li>
             <li>CSS.................under 1 year</li>
-            <li>JavaScript..........under 1 year</li>
-            <li>AutoHotKey..........under 1 year</li>
+            <li>AutoHotkey..........under 1 year</li>
+            <li>XAML................under 1 year</li>
+            <li>FXML................under 1 year</li>
           </ul>
           <hr class="dashedLine">
           <p>Frameworks:</p>
           <ul>
-            <li>Swing.......................Java</li>
-            <li>JUnit.......................Java</li>
             <li>.NET........................C#</li>
             <li>WPF.........................C#</li>
             <li>Xamarin Forms...............C#</li>
+            <li>MSTest......................C#</li>
+            <li>JavaFX......................Java</li>
+            <li>Swing.......................Java</li>
+            <li>JUnit.......................Java</li>
             <li>jQuery......................JavaScript</li>
             <li>Google Apps Script..........JavaScript</li>
           </ul>
           <hr class="dashedLine">
           <p>Development tools:</p>
           <ul>
-            <li>Eclipse..........................Java IDE</li>
-            <li>IntelliJ IDEA....................Java IDE</li>
             <li>Visual Studio....................C# IDE</li>
-            <li>Repl.it..........................HTML, CSS, JavaScript Editor</li>
+            <li>IntelliJ IDEA....................Java IDE</li>
+            <li>Eclipse..........................Java IDE</li>
+            <li>Git..............................Version control</li>
             <li>GitHub...........................Version control</li>
+            <li>Repl.it..........................Online code editor</li>
           </ul>
           <hr class="dashedLine">
           <p>Office tools:</p>
@@ -92,7 +97,9 @@
           <p>Other:</p>
           <ul>
             <li>Object-oriented Programming</li>
-            <li>Algorithms & Data Structures</li>
+            <li>Data Structures</li>
+            <li>Algorithms</li>
+            <li>Unit Testing</li>
             <li>Debugging</li>
           </ul>
         </section>
