--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <section class="accordionItemBody">
           <p>Programming languages:</p>
           <ul>
-            <li>C#..................2 years</li>
-            <li>Java................3 years</li>
-            <li>C...................1 year</li>
-            <li>JavaScript..........under 1 year</li>
-            <li>HTML................under 1 year</li>
-            <li>CSS.................under 1 year</li>
-            <li>AutoHotkey..........under 1 year</li>
-            <li>XAML................under 1 year</li>
-            <li>FXML................under 1 year</li>
+            <li>C#..................Intermediate</li>
+            <li>Java................Intermediate</li>
+            <li>C...................Novice</li>
+            <li>JavaScript..........Novice</li>
+            <li>HTML................Novice</li>
+            <li>CSS.................Novice</li>
+            <li>AutoHotkey..........Novice</li>
+            <li>XAML................Beginner</li>
+            <li>FXML................Beginner</li>
           </ul>
           <hr class="dashedLine">
           <p>Frameworks:</p>
