--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <li>HTML................Novice</li>
             <li>CSS.................Novice</li>
             <li>AutoHotkey..........Novice</li>
+            <li>Python..............Novice</li>
+            <li>SQL.................Beginner</li>
             <li>XAML................Beginner</li>
             <li>FXML................Beginner</li>
           </ul>
@@ -208,7 +210,6 @@
           <p>Relevant accounts:</p>
           <p>
             <ul>
-              <li><a href="https://repl.it/@jamaljalzek">Repl.it</a></li>
               <li><a href="https://github.com/jamaljalzek">GitHub</a></li>
               <li><a href="https://leetcode.com/jamaljalzek/">LeetCode</a></li>
             </ul>
