I made a few minor updates, including adding a reference to my latest project.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <p>Development tools:</p>
           <ul>
             <li>Visual Studio....................C# IDE</li>
+            <li>Visual Studio Code...............AutoHotkey, HTML, CSS, JavaScript editor</li>
             <li>IntelliJ IDEA....................Java IDE</li>
             <li>Eclipse..........................Java IDE</li>
             <li>Git..............................Version control</li>
@@ -159,35 +160,42 @@
         <section class="accordionItemInnerHeader">Personal projects</section>
         <section class="accordionItemBody">
           <p>
-            <a href="https://github.com/jamaljalzek/Capstone_Group_Project">Capstone group project</a><br>
+            <a href="https://github.com/jamaljalzek/Monitor_Brightness_Dimmer">Monitor Brightness Dimmer</a><br>
+            Technologies used: AutoHotkey (v2), Win32 API, Visual Studio Code<br>
+            Initial release: 2022<br>
+            Status: completed
+          </p>
+          <hr class="dashedLine">
+          <p>
+            <a href="https://github.com/jamaljalzek/Capstone_Group_Project">Capstone Group Project</a><br>
             Technologies used: C#, .NET, Xamarin Forms, Visual Studio<br>
             Initial release: 2021<br>
             Status: completed
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/Maze_Puzzle_Generator">Maze puzzle generator</a><br>
+            <a href="https://github.com/jamaljalzek/Maze_Puzzle_Generator">Maze Puzzle Generator</a><br>
             Technologies used: C#, .NET, WPF, Visual Studio<br>
             Initial release: 2020<br>
             Status: completed
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/jamaljalzek.github.io">This portfolio website</a><br>
-            Technologies used: HTML, CSS, JavaScript, jQuery, Google Apps Script, Repl.it<br>
+            <a href="https://github.com/jamaljalzek/jamaljalzek.github.io">jamaljalzek.github.io</a><br>
+            Technologies used: HTML, CSS, JavaScript, jQuery, Google Apps Script, Repl.it, Visual Studio Code<br>
             Initial release: 2020<br>
             Status: completed
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/Sudoku_Puzzle_Solver">Sudoku puzzle solver</a><br>
+            <a href="https://github.com/jamaljalzek/Sudoku_Puzzle_Solver">Sudoku Puzzle Solver</a><br>
             Technologies used: C#, .NET, WPF, Visual Studio<br>
             Initial release: 2020<br>
             Status: completed
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/Sudoku_Puzzle_Game">Sudoku puzzle game</a><br>
+            <a href="https://github.com/jamaljalzek/Sudoku_Puzzle_Game">Sudoku Puzzle Game</a><br>
             Technologies used: Java, Swing, Eclipse<br>
             Initial release: 2020<br>
             Status: completed
@@ -201,7 +209,7 @@
           </p>
           <hr class="dashedLine">
           <p>
-            <a href="https://github.com/jamaljalzek/Cooking_Timer">Cooking timer</a><br>
+            <a href="https://github.com/jamaljalzek/Cooking_Timer">Cooking Timer</a><br>
             Technologies used: Java, Swing, Eclipse<br>
             Initial release: 2019<br>
             Status: completed
