I placed more emphasis on my capstone group project, by giving it a dedicated section. I also updated the technical skills section.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <li>Visual Studio Code...............AutoHotkey, HTML, CSS, JavaScript editor</li>
             <li>IntelliJ IDEA....................Java IDE</li>
             <li>Eclipse..........................Java IDE</li>
+            <li>PyCharm..........................Python IDE</li>
             <li>Git..............................Version control</li>
             <li>GitHub...........................Version control</li>
             <li>Repl.it..........................Online code editor</li>
@@ -84,11 +85,12 @@
           <p>Office tools:</p>
           <ul>
             <li>Google Drive Suite</li>
-            <li>Microsoft Office 365 Suite</li>
+            <li>Microsoft Office Suite</li>
           </ul>
           <hr class="dashedLine">
           <p>Collaboration tools:</p>
           <ul>
+            <li>Cherwell Service Management</li>
             <li>Discord</li>
             <li>Microsoft Teams</li>
             <li>Mural</li>
@@ -99,11 +101,14 @@
           <hr class="dashedLine">
           <p>Other:</p>
           <ul>
-            <li>Object-oriented Programming</li>
+            <li>Object-oriented Programming (OOP)</li>
             <li>Data Structures</li>
             <li>Algorithms</li>
-            <li>Unit Testing</li>
+            <li>Unit Testing/Test Driven Development (TDD)</li>
             <li>Debugging</li>
+            <li>Clean Code</li>
+            <li>SOLID Principles</li>
+            <li>Relational Databases</li>
           </ul>
         </section>
         <!-- End of technical skills section. -->
@@ -136,25 +141,24 @@
       <section class="accordionItemOuterHeader">Software development experience</section>
       <section class="innerAccordion">
 
-        <!-- Beginning of relevant courses section. -->
-        <section class="accordionItemInnerHeader">Relevant courses</section>
+        <!-- Beginning of highlighted project section. -->
+        <section class="accordionItemInnerHeader">Highlighted project</section>
         <section class="accordionItemBody">
+          <p>
+            <a href="https://github.com/jamaljalzek/Capstone_Group_Project">Capstone Group Project</a><br>
+            University of Wisconsin - Milwaukee<br>
+            January 2021 - May 2021<br>
+          </p>
           <ul>
-            <li>CompSci 595 - Capstone Project (with C#).......................................Spring 2021</li>
-            <li>CompSci 557 - Introduction to Database Systems.................................Fall 2019</li>
-            <li>CompSci 535 - Algorithm Design & Analysis......................................Spring 2021</li>
-            <li>CompSci 537 - Introduction to Operating Systems (with C).......................Fall 2020</li>
-            <li>CompSci 482 - Rich Internet Applications (with HTML, CSS, JavaScript)..........Spring 2020</li>
-            <li>CompSci 431 - Programming Languages Concepts...................................Spring 2020</li>
-            <li>CompSci 361 - Introduction to Software Engineering.............................Fall 2019</li>
-            <li>CompSci 351 - Data Structures & Algorithms (with Java).........................Spring 2019</li>
-            <li>CompSci 337 - System Programming (with C)......................................Spring 2020</li>
-            <li>CompSci 315 - Computer Organization & Assembly Language Programming............Summer 2018</li>
-            <li>CompSci 251 - Intermediate Computer Programming (with Java)....................Fall 2018</li>
-            <li>CompSci 250 - Introductory Computer Programming (with Java)....................Spring 2018</li>
+            <li>Collaborated within a small agile team to develop a cross-platform (Android & iOS) privacy focused group messaging mobile application, inspired by popular services like Signal and Telegram.</li>
+            <li>Architected the project by creating extensive flowchart designs via Google Draw.io for the client side, server side, and relational database before any code was written, to serve as documentation for the team.</li>
+            <li>Led the team by creating Product Backlog Items (PBIs) via Trello, then delegating to each team member based on their skill set, availability, etc. to maximize productivity during each sprint.</li>
+            <li>Implemented the mobile application in C# and XAML, utilizing the .NET, Xamarin Forms, and NewtonSoft Json.NET frameworks, along with tools such as Visual Studio, Git, and GitHub.</li>
+            <li>Heavily made use of encryption algorithms such as RSA and AES, as well as hashing algorithms such as SHA256 and MD5 to achieve user privacy through robust security.</li>
+            <li>Presented a fully functional product on the final day of the semester, demonstration video available on GitHub.</li>
           </ul>
         </section>
-        <!-- End of relevant courses section. -->
+        <!-- End of highlighted project section. -->
 
         <!-- Beginning of personal projects section. -->
         <section class="accordionItemInnerHeader">Personal projects</section>
@@ -163,13 +167,6 @@
             <a href="https://github.com/jamaljalzek/Monitor_Brightness_Dimmer">Monitor Brightness Dimmer</a><br>
             Technologies used: AutoHotkey (v2), Win32 API, Visual Studio Code<br>
             Initial release: 2022<br>
-            Status: completed
-          </p>
-          <hr class="dashedLine">
-          <p>
-            <a href="https://github.com/jamaljalzek/Capstone_Group_Project">Capstone Group Project</a><br>
-            Technologies used: C#, .NET, Xamarin Forms, Visual Studio<br>
-            Initial release: 2021<br>
             Status: completed
           </p>
           <hr class="dashedLine">
@@ -225,6 +222,26 @@
         </section>
         <!-- End of personal projects section. -->
 
+        <!-- Beginning of relevant courses section. -->
+        <section class="accordionItemInnerHeader">Relevant courses</section>
+        <section class="accordionItemBody">
+          <ul>
+            <li>CompSci 595 - Capstone Project (with C#).......................................Spring 2021</li>
+            <li>CompSci 557 - Introduction to Database Systems.................................Fall 2019</li>
+            <li>CompSci 535 - Algorithm Design & Analysis......................................Spring 2021</li>
+            <li>CompSci 537 - Introduction to Operating Systems (with C).......................Fall 2020</li>
+            <li>CompSci 482 - Rich Internet Applications (with HTML, CSS, JavaScript)..........Spring 2020</li>
+            <li>CompSci 431 - Programming Languages Concepts...................................Spring 2020</li>
+            <li>CompSci 361 - Introduction to Software Engineering.............................Fall 2019</li>
+            <li>CompSci 351 - Data Structures & Algorithms (with Java).........................Spring 2019</li>
+            <li>CompSci 337 - System Programming (with C)......................................Spring 2020</li>
+            <li>CompSci 315 - Computer Organization & Assembly Language Programming............Summer 2018</li>
+            <li>CompSci 251 - Intermediate Computer Programming (with Java)....................Fall 2018</li>
+            <li>CompSci 250 - Introductory Computer Programming (with Java)....................Spring 2018</li>
+          </ul>
+        </section>
+        <!-- End of relevant courses section. -->
+
       </section>
       <!-- End of software development experience section. -->
 
@@ -233,7 +250,6 @@
       <section class="accordionItemBody">
         <p>
           UITS Help Desk Consultant<br>
-          University Information Technology Services (UITS)<br>
           University of Wisconsin - Milwaukee<br>
           June 2018 – December 2018
         </p>
@@ -242,7 +258,7 @@
           <li>Partnered with technology specialists across separate departments throughout the university to collaboratively resolve multifaceted incidents.</li>
           <li>Communicated with a diverse spectrum of students, faculty, staff, and alumni to identify and implement solutions to a wide range of I.T. problems.</li>
           <li>Supervised various computer laboratories around the campus, including scanning and printing stations, to troubleshoot incidents, answer users’ questions, provide equipment, etc. in order to ensure smooth operation for users.</li>
-          <li>Utilized the Cherwell Management System to create, work on, escalate, and resolve incidents (tickets).</li>
+          <li>Utilized the Cherwell Service Management system to create, work on, escalate, and resolve incidents (tickets).</li>
         </ul>
       </section>
       <!-- End of technical experience employment section. -->
